In order to compile Linphone, you need:
* A computer with Windows 8 (Pro if you want to use the emulator)
* Visual Studio 11 (2012)
* The Windows Phone 8 SDK

To import the solution, open the Linphone.sln file at the root of the project.

To compile and run it, plug a windows phone 8 device or choose an emulator 
and run the build/install (using F5 or the green triangle). The app will start
automatically once built.

/!\ Please check the Linphone project in the solution is set as startup project.
(The startup project is in bold in the project list)
If not, right click on Linphone project and choose the menu "Set as StartUp project".

See README.txt file for an explanation about how the project is working.

03-01-2013:
* Improved stubs to mimic liblinphone behavior (registration states, call states, global states) amd fake call logs
* Can simulate incoming/outcoing calls 

02-15-2013:
* Liblinphone documented C++/Cx wrapper directly usable in C#
* Part of the graphical interface (call related interface not working)